# greenflow

./: .devcontainer.json  .envrc  .gitignore  .gitmodules  .secrets.env  Dockerfile  Justfile  Makefile  README.md  analysis.ipynb  ansible.cfg  api-proxy-lille-grid5000-fr-chain.pem  bench.py  destroy.py  docker-compose.yaml  embed.py  enter  entrypoint.py  env.yaml  environment.yaml  exp.ipynb  exp.sh  flake.nix  gen-inventory.yaml  justfile  k3d-config.yaml  k3s-setup.yaml  k3s.yaml  loadgen.yml  migrate.py  mypy.ini  pyproject.toml  requirements.txt  shell.nix  sysbench.yaml  tasks.py  vm.ipynb
.devcontainer/: Dockerfile  devcontainer.json  docker-entrypoint.sh  onCreate.sh
.ipynb_checkpoints/: analysis-checkpoint.ipynb
ansible/: ansible.cfg
book/: book.toml
deploy/: .env  Caddyfile  docker-compose.yaml  test-cluster.yaml
deploy/enoslib/: deploy.py  destroy.py  gen-inventory.yaml  k3s-setup.yaml  pyproject.toml
deploy/enoslib/roles/helm/tasks/: main.yaml
deploy/enoslib/roles/helm/templates/: grafana-pvc.yaml.j2  nfs-sc.yaml.j2  scaph-ServiceMonitor.yaml.j2
gin/: g5k-defaults.gin  ingest-kafka-vm.gin  ingest-kafka.gin  ingest-redpanda-nocache.gin  ingest-redpanda.gin  ingest_base.gin  test-aws.gin  test-platform.gin  uc1-flink.gin  uc3-flink-10000.gin  uc3-flink-20000.gin  uc3-flink-30000.gin  uc3-flink-40000.gin  uc3-flink-kafka.gin  uc3-flink-linear.gin  uc3-flink-redpanda.gin  uc3-flink.gin  uc3-kstreams-linear.gin  uc3-kstreams.gin  vmon-defaults.gin
greenflow/: __init__.py  __main__.py  adaptive.py  analysis.py  analyze.py  aws.py  base.py  g.py  (+24 more)
(+243 files in other folders)
