[tool.poetry]
name = "greenflow"
version = "0.1.0"
description = ""
authors = ["reisub0 <reisub0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
enoslib = "^7.2.1"
ipywidgets = "^7.7.1"
watchdog = "^2.1.9"
kubernetes = "^24.2.0"
sh = "^1.14.2"
prometheus-pandas = "^0.3.1"
numpy = "^1.23.2"
pandas = "^1.4.3"
pendulum = "^2.1.2"
prometheus-api-client = "^0.5.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
ipykernel = "^6.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
