[tool.poetry]
name = "greenflow"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
enoslib = "^8.1.3"
fire = "^0.5.0"
gin-config = "^0.5.0"
icecream = "^2.1.3"
ansible-runner = "^2.3.2"
pendulum = "^2.1.2"
sh = "^2.0.4"
pydantic = "^1.10.8"
bpython = "^0.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
