[tool.poetry]
name = "greenflow"
version = "0.1.0"
description = ""
authors = ["reisub0 <reisub0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
enoslib = "^7.2.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
